--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -18,7 +18,11 @@ body {
   color: #545149;
   background-color: #f4f1ec;
   font-size: 24px;
+  font-family: 'Source Sans Pro';
 }
+/* nav {
+  font-family: 'Bungee';
+} */
 
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
